add jvm heap knowledge 2